菜单响应式适配&footer拓展&友链联盟跳转 ZaNksC/zanks-blog@08a252ff77dc443954eca68744ee31522c67aaef

--- a/about/index.html
+++ b/about/index.html
@@ -18,12 +18,13 @@
 <link rel="stylesheet" href="/css/comments.min.c2751df1064a72145ef98cd93582261da82b3ea7fd6941c470016d0b5e37d64f.css" integrity="sha256-wnUd8QZKchRe&#43;YzZNYImHagrPqf9aUHEcAFtC1431k8=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/copyright.min.cc055a71e31b212da911bb0f8acdcab692717a022a831e57e3027a2736425459.css" integrity="sha256-zAVaceMbIS2pEbsPis3KtpJxegIqgx5X4wJ6JzZCVFk=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/friends.min.5557e69d8483026ce89117ed42683731bf33d585269edbbb2852d7732e6ddc1b.css" integrity="sha256-VVfmnYSDAmzokRftQmg3Mb8z1YUmntu7KFLXcy5t3Bs=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/header.min.8a78f02edfc16ed68a91775b84570bef1d772d6c57e3e63c7b7e6f98535a18cf.css" integrity="sha256-injwLt/BbtaKkXdbhFcL7x13LWxX4&#43;Y8e35vmFNaGM8=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/goto-next.min.21d9b5d78d24a69c6f8bd2ca32bb0013392be06c27a077386c4906a515b1fb90.css" integrity="sha256-Idm1140kppxvi9LKMrsAEzkr4GwnoHc4bEkGpRWx&#43;5A=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/header.min.1e33df590796080d1d8aa48c70a46bf0c65309158a5f68c9aa75683758c12534.css" integrity="sha256-HjPfWQeWCA0diqSMcKRr8MZTCRWKX2jJqnVoN1jBJTQ=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/home.min.199221816490e0948ddacd2bb28fd264331abc8fc80781ed3855a80b781f6cfc.css" integrity="sha256-GZIhgWSQ4JSN2s0rso/SZDMavI/IB4HtOFWoC3gfbPw=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/last-update.min.d1b9fb9c3f03856abc897283724600e0ae25d4fdd9e87081befb3b8b5b7bf8b7.css" integrity="sha256-0bn7nD8DhWq8iXKDckYA4K4l1P3Z6HCBvvs7i1t7&#43;Lc=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/list-post.min.369fcddcc2fda2b18ce670202e78a3a3fe0d158fff89a7d128842ff9bd36af39.css" integrity="sha256-Np/N3ML9orGM5nAgLnijo/4NFY//iafRKIQv&#43;b02rzk=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/list.min.ba6eece6ea29ba755d3d4989c14ff1c730c9a68122468f841675efd689ad72f7.css" integrity="sha256-um7s5uopunVdPUmJwU/xxzDJpoEiRo&#43;EFnXv1omtcvc=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/main.min.29ae4cecaf350d1bc0262f1e9ddf783ca38a6fc62591130a68e919dd9071480f.css" integrity="sha256-Ka5M7K81DRvAJi8end94PKOKb8YlkRMKaOkZ3ZBxSA8=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/main.min.22aa6a071c63e010d1cd98165743c8f42a80a24fb0fc48bb9104b54f29e6a3db.css" integrity="sha256-IqpqBxxj4BDRzZgWV0PI9CqAok&#43;w/Ei7kQS1Tynmo9s=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/md.min.7b8835e68cda16e46f325cdca50edab35db49617a79f58a70876a458be978cd1.css" integrity="sha256-e4g15ozaFuRvMlzcpQ7as120lhenn1inCHakWL6XjNE=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/menu.min.f38cd69111b7a83bdbca2c301f67c54bc7847378e4f524d091025ff147f29146.css" integrity="sha256-84zWkRG3qDvbyiwwH2fFS8eEc3jk9STQkQJf8UfykUY=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/page.min.327faf4b56f53f360d59c9ec4ebc3e459780d6081f93e8d2632a521705b75684.css" integrity="sha256-Mn&#43;vS1b1PzYNWcnsTrw&#43;RZeA1ggfk&#43;jSYypSFwW3VoQ=" crossorigin="anonymous">
@@ -32,7 +33,7 @@
 <link rel="stylesheet" href="/css/site-info.min.99f7ea72487d21367994413cf28009c799038172b9fa27de1e78d6bc025a1baa.css" integrity="sha256-mffqckh9ITZ5lEE88oAJx5kDgXK5&#43;ifeHnjWvAJaG6o=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/tags.min.01948be497fb7f68e7327070ba65a644286938095ca3199e4079a649e96f87f4.css" integrity="sha256-AZSL5Jf7f2jnMnBwumWmRChpOAlcoxmeQHmmSelvh/Q=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/terms-tags.min.1a79156c3d468a99582ed38b45993f2077357ffd9745fe573dc9478c4afd427a.css" integrity="sha256-GnkVbD1GiplYLtOLRZk/IHc1f/2XRf5XPclHjEr9Qno=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/theme-default.min.c74757f235b6e5da75d766abaed427acb9a5b759b4fd0c9a10e9c430f4f3bd71.css" integrity="sha256-x0dX8jW25dp112arrtQnrLmlt1m0/QyaEOnEMPTzvXE=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/theme-default.min.e5b67e6744721c1a4c5c500a49c71ce7ea1b67d6c46fa4afd7e5d483e5a4af77.css" integrity="sha256-5bZ&#43;Z0RyHBpMXFAKSccc5&#43;obZ9bEb6Sv1&#43;XUg&#43;Wkr3c=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/toc.min.97935001d1c901f611b9a21cb1e0b103af62ffd1c8dca20518900dacb2af7968.css" integrity="sha256-l5NQAdHJAfYRuaIcseCxA69i/9HI3KIFGJANrLKveWg=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/third-party/swiper-bundle.min.min.5983c13a687fefa51ed8c90899af9d232c7cf661ce4b8227d98b68044c7b43d5.css" integrity="sha256-WYPBOmh/76Ue2MkIma&#43;dIyx89mHOS4In2YtoBEx7Q9U=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/shortcode/admonition.min.2a42de5374e28cad4d33f9381b26947b93a6fe37801c8ec996777009ae171907.css" integrity="sha256-KkLeU3TijK1NM/k4GyaUe5Om/jeAHI7JlndwCa4XGQc=" crossorigin="anonymous">
@@ -49,7 +50,7 @@
 
 
 
-<script src="/js/bundle.1e1d7d073a5ef9d0705fa878970ccc1a97f71462f6f03ae7e760414c51f55f3e.js" integrity="sha256-Hh19Bzpe&#43;dBwX6h4lwzMGpf3FGL28Drn52BBTFH1Xz4=" crossorigin="anonymous"></script>
+<script src="/js/bundle.8201b150c56b1ffe751449520917470b09f5834822bd39eb530ea3d485ef5f89.js" integrity="sha256-ggGxUMVrH/51FElSCRdHCwn1g0givTnrUw6j1IXvX4k=" crossorigin="anonymous"></script>
 
 
 
@@ -111,6 +112,7 @@
             <span id="header-type-it"></span>
         </div>
     </div>
+    <div class="mobile-menu-btn" aria-label="导航菜单">☰</div>
     <div class="nav-container">
         
   <nav>
@@ -276,7 +278,9 @@ document.addEventListener("DOMContentLoaded", function() {
   </main>
   <footer>
     <p>Copyright 2025 - 2025. All rights reserved. Powered By Hugo.Designed By <a href="https://github.com/ZaNksC/hugo-theme-fund/tree/main">Fund</a></p>
-
+<div>
+    <a href="https://icp.gov.moe/?keyword=20250574" target="_blank">萌ICP备20250574号</a>
+</div>
   </footer>
 </body>
 </html>
