--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <link rel="shortcut icon" href="" type="image/x-icon">
 <link rel="icon" href="" type="image/x-icon"><meta name="twikoo-env-id" content="https://zanks-twikoo.netlify.app/.netlify/functions/twikoo">
 
-<link rel="stylesheet" href="/css/about.min.2e74082a8019a34e210da65762d79d8950155eb3ba845dfb3de7880ba7227b75.css" integrity="sha256-LnQIKoAZo04hDaZXYtediVAVXrO6hF37PeeIC6cie3U=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/about.min.3bd28d7600c4f0a0b8c01cd3cf3bda99a1aaec45be8271c0affe1f63747e1487.css" integrity="sha256-O9KNdgDE8KC4wBzTzzvamaGq7EW&#43;gnHAr/4fY3R&#43;FIc=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/announcement.min.4aa56228e8aaec652528ee567a608c64629a0eb2d9de7403daec6ea5e97aa9cc.css" integrity="sha256-SqViKOiq7GUlKO5WemCMZGKaDrLZ3nQD2uxupel6qcw=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/author-info.min.dc87bcd3f028c2dde3ea16d085e5717eeafcd00682a5fcfcc21169e64afe527a.css" integrity="sha256-3Ie80/Aowt3j6hbQheVxfur80AaCpfz8whFp5kr&#43;Uno=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/authors.min.ea4efdff1158f97241ec30e87f98e5c8772e40d1f596ac9c2b9203ad6848ef2c.css" integrity="sha256-6k79/xFY&#43;XJB7DDof5jlyHcuQNH1lqycK5IDrWhI7yw=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/basic.min.277d6a7464200b9f4e1f28aaf47a316d2cba09bdd73247a52ca33eb834b373c9.css" integrity="sha256-J31qdGQgC59OHyiq9HoxbSy6Cb3XMkelLKM&#43;uDSzc8k=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/chirp.min.ca5885bfce51f047e97eae90b850419926d33331c9f46b84cfd03258b85a3c97.css" integrity="sha256-yliFv85R8Efpfq6QuFBBmSbTMzHJ9GuEz9AyWLhaPJc=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/comments.min.c2751df1064a72145ef98cd93582261da82b3ea7fd6941c470016d0b5e37d64f.css" integrity="sha256-wnUd8QZKchRe&#43;YzZNYImHagrPqf9aUHEcAFtC1431k8=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/chirp.min.314185ce937fdc2ac73b2371ad3043871b66d141b84ca190826ae17afbce299c.css" integrity="sha256-MUGFzpN/3CrHOyNxrTBDhxtm0UG4TKGQgmrhevvOKZw=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/comments.min.4fdf81a342207b54cf257809f1ffe44c6bacc414281890374e00036cc232841c.css" integrity="sha256-T9&#43;Bo0Ige1TPJXgJ8f/kTGusxBQoGJA3TgADbMIyhBw=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/copyright.min.cc055a71e31b212da911bb0f8acdcab692717a022a831e57e3027a2736425459.css" integrity="sha256-zAVaceMbIS2pEbsPis3KtpJxegIqgx5X4wJ6JzZCVFk=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/friends.min.5557e69d8483026ce89117ed42683731bf33d585269edbbb2852d7732e6ddc1b.css" integrity="sha256-VVfmnYSDAmzokRftQmg3Mb8z1YUmntu7KFLXcy5t3Bs=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/friends.min.41368b5465258df1e9b1444a0a54d3c51a39c91778892af2cd1cbe878df785c2.css" integrity="sha256-QTaLVGUljfHpsURKClTTxRo5yRd4iSryzRy&#43;h433hcI=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/goto-next.min.21d9b5d78d24a69c6f8bd2ca32bb0013392be06c27a077386c4906a515b1fb90.css" integrity="sha256-Idm1140kppxvi9LKMrsAEzkr4GwnoHc4bEkGpRWx&#43;5A=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/header.min.1e33df590796080d1d8aa48c70a46bf0c65309158a5f68c9aa75683758c12534.css" integrity="sha256-HjPfWQeWCA0diqSMcKRr8MZTCRWKX2jJqnVoN1jBJTQ=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/header.min.f5db73278da983c7a2115f617aa37c62bcea954189500dd97c03196296fd3968.css" integrity="sha256-9dtzJ42pg8eiEV9heqN8YrzqlUGJUA3ZfAMZYpb9OWg=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/home.min.199221816490e0948ddacd2bb28fd264331abc8fc80781ed3855a80b781f6cfc.css" integrity="sha256-GZIhgWSQ4JSN2s0rso/SZDMavI/IB4HtOFWoC3gfbPw=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/last-update.min.d1b9fb9c3f03856abc897283724600e0ae25d4fdd9e87081befb3b8b5b7bf8b7.css" integrity="sha256-0bn7nD8DhWq8iXKDckYA4K4l1P3Z6HCBvvs7i1t7&#43;Lc=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/list-post.min.369fcddcc2fda2b18ce670202e78a3a3fe0d158fff89a7d128842ff9bd36af39.css" integrity="sha256-Np/N3ML9orGM5nAgLnijo/4NFY//iafRKIQv&#43;b02rzk=" crossorigin="anonymous">
