--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="/css/authors.min.ea4efdff1158f97241ec30e87f98e5c8772e40d1f596ac9c2b9203ad6848ef2c.css" integrity="sha256-6k79/xFY&#43;XJB7DDof5jlyHcuQNH1lqycK5IDrWhI7yw=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/basic.min.277d6a7464200b9f4e1f28aaf47a316d2cba09bdd73247a52ca33eb834b373c9.css" integrity="sha256-J31qdGQgC59OHyiq9HoxbSy6Cb3XMkelLKM&#43;uDSzc8k=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/chirp.min.314185ce937fdc2ac73b2371ad3043871b66d141b84ca190826ae17afbce299c.css" integrity="sha256-MUGFzpN/3CrHOyNxrTBDhxtm0UG4TKGQgmrhevvOKZw=" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/comments.min.4fdf81a342207b54cf257809f1ffe44c6bacc414281890374e00036cc232841c.css" integrity="sha256-T9&#43;Bo0Ige1TPJXgJ8f/kTGusxBQoGJA3TgADbMIyhBw=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/comments.min.e4171beb72736744a3f6c50c2b4fdfeef88e2a56c8a4b8ef3615e98ef2e23dc6.css" integrity="sha256-5Bcb63JzZ0Sj9sUMK0/f7viOKlbIpLjvNhXpjvLiPcY=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/copyright.min.cc055a71e31b212da911bb0f8acdcab692717a022a831e57e3027a2736425459.css" integrity="sha256-zAVaceMbIS2pEbsPis3KtpJxegIqgx5X4wJ6JzZCVFk=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/friends.min.86e876c797fe282e0dcac6cefcc90599f5280368e3310615fa98622e587d58be.css" integrity="sha256-huh2x5f&#43;KC4NysbO/MkFmfUoA2jjMQYV&#43;phiLlh9WL4=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/goto-next.min.21d9b5d78d24a69c6f8bd2ca32bb0013392be06c27a077386c4906a515b1fb90.css" integrity="sha256-Idm1140kppxvi9LKMrsAEzkr4GwnoHc4bEkGpRWx&#43;5A=" crossorigin="anonymous">
