--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <script
   async
-  src="https://www.googletagmanager.com/gtag/js?id="
+  src="https://www.googletagmanager.com/gtag/js?id=G-420MPRSEER"
 ></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -97,7 +97,7 @@
   }
   gtag("js", new Date());
 
-  gtag("config", "");
+  gtag("config", "G-420MPRSEER");
 </script>
 
 </head>
