标签词云 ZaNksC/zanks-blog@f8e04b1c47a09d588cec8514c12777e77716a251

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <link rel="stylesheet" href="https://unpkg.com/cal-heatmap/dist/cal-heatmap.css" />
 
 
-<script src="/js/optional/wordcloud2.js"></script>
+<script src="/js/third-party/wordcloud2.js"></script>
 
 
 
