碎碎念-mc ZaNksC/zanks-blog@1ce9a7e3d351cdeabcf06ec4f03cea99d4aeaa2c

--- a/chirp/index.html
+++ b/chirp/index.html
@@ -160,8 +160,32 @@
 <div class="single-container fund-padding-top ">
     <div class="main-container">
         <div class="left-container fund-border chirp-group-container">
+            <div class="chirp-container" x-slug="c20250331">
+                <div class="avatar-container"><img src="/images/default/avatar.jpg">
+                </div>
+                <div class="chirp-info">
+                    <div class="chirp-content post-container">
+                        <p>总是时不时会有一段时间来怀念曾经联机打 Minecreft 的日子。前段时间发现MCBBS关站，又发现经常看的安逸菌其实也停更了好久（听说去上班了）。
+好像这个游戏的同好者确实不多了，不知道还会不会有重新开一个服和朋友一起为了打造一把大宝剑挫一堆机器的日子。</p>
+
+                    </div>
+                    <div class="chirp-imgs-container">
+                    </div>
+                    <div class="chirp-footer fund-secondary">
+                        <div>
+                            2025-03-31 15:27:00
+                        </div>
+                        <div class="chirp-comments-btn">
+                            评论
+                        </div>
+                    </div>
+                    <div class="chirp-comments">
+                        <div id="comments-c20250331"></div>
+                    </div>
+                </div>
+            </div>
             <div class="chirp-container" x-slug="happybirthdaytofund-1">
-                <div class="avatar-container"><img src="/images/example/hjj.jpg">
+                <div class="avatar-container"><img src="/images/default/avatar.jpg">
                 </div>
                 <div class="chirp-info">
                     <div class="chirp-content post-container">
@@ -190,7 +214,7 @@
                 </div>
             </div>
             <div class="chirp-container" x-slug="git-lf-crlf">
-                <div class="avatar-container"><img src="/images/example/hjj.jpg">
+                <div class="avatar-container"><img src="/images/default/avatar.jpg">
                 </div>
                 <div class="chirp-info">
                     <div class="chirp-content post-container">
