备案号 ZaNksC/zanks-blog@3900d360fd233b91c5f360218c7e9b1cdd48e5cd

--- a/index.html
+++ b/index.html
@@ -1386,6 +1386,8 @@
     <p>Copyright 2025 - 2025. All rights reserved. Powered By Hugo.Designed By <a href="https://github.com/ZaNksC/hugo-theme-fund/tree/main">Fund</a></p>
 <div>
     <a href="https://icp.gov.moe/?keyword=20250574" target="_blank">萌ICP备20250574号</a>
+    |
+    浙ICP备2025162460号
 </div>
   </footer>
 </body>
