添加备案 ZaNksC/zanks-blog@75b3f77bfe2b8622e556e322c7b13a67805189cb

--- a/chirp/index.html
+++ b/chirp/index.html
@@ -720,7 +720,7 @@
 <div>
     <a href="https://icp.gov.moe/?keyword=20250574" target="_blank">萌ICP备20250574号</a>
     |
-    浙ICP备2025162460号
+    浙ICP备2025162460号 | 浙公网安备33020502001229号
 </div>
   </footer>
 </body>
