--- a/about/index.html
+++ b/about/index.html
@@ -291,7 +291,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div>
     <a href="https://icp.gov.moe/?keyword=20250574" target="_blank">萌ICP备20250574号</a>
     |
-    浙ICP备2025162460号
+    浙ICP备2025162460号 | 浙公网安备33020502001229号
 </div>
   </footer>
 </body>
