更新了一下hjj的信息 ZaNksC/zanks-blog@7976465ef90f6e70278e518ce3408e2c0485f963

--- a/about/index.html
+++ b/about/index.html
@@ -264,8 +264,8 @@
 <li>🎂 生日:  02.16</li>
 <li>🐈‍⬛ 性别:  弟弟</li>
 <li>🏅 爱好:  睡着铲屎官头上、跑酷</li>
-<li>🎯 体重:  只有8斤的苗条小猫</li>
-<li>🍔 食物:  只喜欢吃垃圾食品，酷爱猫条。不爱吃罐罐和猫粮。目前还没吃过冻干，都怪铲屎官！</li>
+<li>🎯 体重:  只有 <del>8</del> <strong>8.4</strong> 斤的苗条小猫（擅长体重管理）</li>
+<li>🍔 食物:  <del>只喜欢吃垃圾食品，酷爱猫条。不爱吃罐罐和猫粮。目前还没吃过冻干，都怪铲屎官！</del>  现在什么都爱吃了，冻干冻干冻干！餐包餐包餐包！罐头罐头罐头！</li>
 </ul>
 
                     </div>
