--- a/chirp/index.html
+++ b/chirp/index.html
@@ -163,6 +163,29 @@
 <div class="single-container fund-padding-top ">
     <div class="main-container">
         <div class="left-container fund-border chirp-group-container">
+            <div class="chirp-container" x-slug="hjj_20250624">
+                <div class="avatar-container"><img src="/images/example/hjj.jpg">
+                </div>
+                <div class="chirp-info">
+                    <div class="chirp-content post-container">
+                        <p>最近天天都有冻干吃，魔法小碗时不时就会刷新不同口味的肉泥。还有人陪我玩，生活真是乐无边。</p>
+
+                    </div>
+                    <div class="chirp-imgs-container">
+                    </div>
+                    <div class="chirp-footer fund-secondary">
+                        <div>
+                            2025-06-24 14:38:25
+                        </div>
+                        <div class="chirp-comments-btn">
+                            评论
+                        </div>
+                    </div>
+                    <div class="chirp-comments">
+                        <div id="comments-hjj_20250624"></div>
+                    </div>
+                </div>
+            </div>
             <div class="chirp-container" x-slug="c20250331">
                 <div class="avatar-container"><img src="/images/default/avatar.jpg">
                 </div>
