更新了一下hjj的信息 ZaNksC/zanks-blog@85318b330e9263a9c81b5da5a4a673b05fe0fe39

--- a/chirp/index.html
+++ b/chirp/index.html
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <div class="chirp-container" x-slug="happybirthdaytofund-1">
-                <div class="avatar-container"><img src="/images/default/avatar.jpg">
+                <div class="avatar-container"><img src="/images/example/hjj.jpg">
                 </div>
                 <div class="chirp-info">
                     <div class="chirp-content post-container">
