更新hjj的江山系列 ZaNksC/zanks-blog@db839d70eda7c6fecaa9defd76ea1310e263176a

--- a/about/index.html
+++ b/about/index.html
@@ -621,7 +621,7 @@
     </div>
     <div class="item-content-wrapper cat-food-content">
         <div class="cat-food-title">
-            【Mjamjam】菲力-鸡肉三文鱼
+            【Mjamjam】鸡肉三文鱼
         </div>
         <div class="cat-food-meta-wrapper card-list-item-subtext">
             <div class="card-list-item-meta">
@@ -671,7 +671,7 @@
     </div>
     <div class="item-content-wrapper cat-food-content">
         <div class="cat-food-title">
-            【Mjamjam】盖浇饭-鸡菲力盖浇火鸡
+            【Mjamjam】鸡菲力盖浇火鸡
         </div>
         <div class="cat-food-meta-wrapper card-list-item-subtext">
             <div class="card-list-item-meta">
@@ -721,7 +721,7 @@
     </div>
     <div class="item-content-wrapper cat-food-content">
         <div class="cat-food-title">
-            【Mjamjam】盖浇饭-鸡菲力盖浇牛
+            【Mjamjam】鸡菲力盖浇牛
         </div>
         <div class="cat-food-meta-wrapper card-list-item-subtext">
             <div class="card-list-item-meta">
