hjj ZaNksC/zanks-blog@c77ae31eb6fd818c9524a576e5507d0e51f69497

--- a/about/index.html
+++ b/about/index.html
@@ -757,6 +757,56 @@
     </div>
 </div>
 
+<link rel="stylesheet"
+      href="../../assets/css/shortcode/cat-food.css">
+
+
+
+<div class="cat-food card-list-item card-list-item-style-yellow">
+    <div class="cat-food-item-img-wrapper">
+        <img
+                src="https://zanks1996-1256221076.cos.ap-shanghai.myqcloud.com/blog/about/hjj/granatapet-%E7%BD%90%E5%A4%B4-%E9%87%91%E4%BA%A4-6%E5%8F%B7.webp"
+                onerror="this.onerror=null;this.src='/images/default/cat-food.webp';"
+        />
+    </div>
+    <div class="item-content-wrapper cat-food-content">
+        <div class="cat-food-title">
+            金交6号-小牛肉家禽
+        </div>
+        <div class="cat-food-meta-wrapper card-list-item-subtext">
+            <div class="card-list-item-meta">
+                <div class="card-food-meta-item-label">🌍产地</div>
+                <div class="card-food-meta-item-content">德国</div>
+            </div>
+            <div class="card-list-item-meta">
+                <div class="card-food-meta-item-label">⚖️规格</div>
+                <div class="card-food-meta-item-content">100g</div>
+            </div>
+            <div class="card-list-item-meta">
+                <div class="card-food-meta-item-label">🍽️系列</div>
+                <div class="card-food-meta-item-content">金色交响曲</div>
+            </div>
+            <div class="card-list-item-meta">
+                <div class="card-food-meta-item-label">🥩版本</div>
+                <div class="card-food-meta-item-content">小牛肉家禽</div>
+            </div>
+            <div class="card-list-item-meta">
+                <div class="card-food-meta-item-label">😻评分</div>
+                <div class="card-food-meta-item-content">4.8</div>
+            </div>
+            <div class="card-list-item-meta">
+                <div class="card-food-meta-item-label">💰价格</div>
+                <div class="card-food-meta-item-content"></div>
+            </div>
+        </div>
+        <div class="cat-food-desc card-list-item-subtext">
+            
+我以为这是一个分数会比较优秀的罐头，可能是我的计分方式出现了错误
+
+        </div>
+    </div>
+</div>
+
 
 
 
