修复远程部署镜像构建问题 ZaNksC/zanks-blog@e53bf4db17069879fd535fd13c3badad94a74a5d

--- a/chirp/index.html
+++ b/chirp/index.html
@@ -169,6 +169,29 @@
 <div class="single-container fund-padding-top ">
     <div class="main-container">
         <div class="left-container fund-border chirp-group-container">
+            <div class="chirp-container" x-slug="hjj_20250737">
+                <div class="avatar-container"><img src="/images/default/avatar.jpg">
+                </div>
+                <div class="chirp-info">
+                    <div class="chirp-content post-container">
+                        <p>可怜的小猫黄大胆，竟然是空气过敏体质，只能天天吃药了。可怜的宝宝啊</p>
+
+                    </div>
+                    <div class="chirp-imgs-container">
+                    </div>
+                    <div class="chirp-footer fund-secondary">
+                        <div>
+                            2025-07-27 19:59:25
+                        </div>
+                        <div class="chirp-comments-btn">
+                            评论
+                        </div>
+                    </div>
+                    <div class="chirp-comments">
+                        <div id="comments-hjj_20250737"></div>
+                    </div>
+                </div>
+            </div>
             <div class="chirp-container" x-slug="hjj_20250627">
                 <div class="avatar-container"><img src="/images/example/hjj.jpg">
                 </div>
