新增友链Vei ZaNksC/zanks-blog@afc5c3ccce768c810e1bf1dda217f28a72fae078

--- a/friends/index.html
+++ b/friends/index.html
@@ -221,6 +221,18 @@
                         不积跬步无以至千里。
                     </div>
                 </div>
+            </a><a class="friend-card" href="https://blog.veitzn.top">
+                <div>
+                    <img class="friend-card-image" src="https://cloud.230456.xyz/Logo/VeiLogoN.png">
+                </div>
+                <div class="friend-card-meta">
+                    <div class="fund-title">
+                        Vei Blog
+                    </div>
+                    <div class="fund-secondary friends-description">
+                        松窗竹户，万千潇洒
+                    </div>
+                </div>
             </a><a class="friend-card" href="https://www.zanks.link">
                 <div>
                     <img class="friend-card-image" src="https://avatars.githubusercontent.com/u/144093429?v=4">
