作者更名 ZaNksC/zanks-blog@1b84acdaf853df813a88dff1d656a7a93e24b9cb

--- a/about/index.html
+++ b/about/index.html
@@ -181,7 +181,7 @@
         <div class="tabs">
             <div class="button-group">
                 <button class="tab-item active"
-                        tab-id="author-zanks">Za_Nks</button>
+                        tab-id="author-zanks">剥龙虾大王</button>
                 <button class="tab-item"
                         tab-id="author-amao">恶魔毛毛大王</button>
                 <button class="tab-item"
@@ -192,9 +192,9 @@
                     <div class="about-meta-wrapper">
                         <div class="about-meta">
                             <div>
-                                <img src="/images/default/avatar.jpg">
+                                <img src="/images/avatar/zanks.webp">
                             </div>
-                            <div> Za_Nks </div>
+                            <div> 剥龙虾大王 </div>
                             <div> 剥龙虾大王、剥柚子也还可以 </div>
                             
 <div class="social">
@@ -220,7 +220,7 @@
                         </div>
                         <div class="about-info">
                             <ul>
-<li>😀 姓名:  Za_Nks</li>
+<li>😀 姓名:  剥龙虾大王</li>
 <li>💑 情侣:  有一个博学而又可爱的人生伴侣</li>
 <li>🥰 昵称:  剥龙虾大王、剥柚子大王</li>
 <li>🎂 生日:  保密</li>
