--- a/chirp/index.html
+++ b/chirp/index.html
@@ -175,11 +175,11 @@
     <div class="main-container">
         <div class="left-container fund-border chirp-group-container">
             <div class="chirp-container" x-slug="">
-                <div class="avatar-container"><img src="/images/default/avatar.jpg">
+                <div class="avatar-container"><img src="/images/avatar/zanks.webp">
                 </div>
                 <div class="chirp-info"><div class="chirp-content post-container">
                         <div>
-                            <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">Za_Nks</div>
+                            <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">剥龙虾大王</div>
                         </div>
                         <p>小猫黄基金的眼睛发炎了，我给他带了圈，从昨天晚上到今天都很乖的接受了，结果我今天一上班他就把圈摘了！还是在摄像头下面！请问这是在向我宣战吗？</p>
 
@@ -200,11 +200,11 @@
                 </div>
             </div>
             <div class="chirp-container" x-slug="hjj_20250737">
-                <div class="avatar-container"><img src="/images/default/avatar.jpg">
+                <div class="avatar-container"><img src="/images/avatar/zanks.webp">
                 </div>
                 <div class="chirp-info"><div class="chirp-content post-container">
                         <div>
-                            <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">Za_Nks</div>
+                            <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">剥龙虾大王</div>
                         </div>
                         <p>可怜的小猫黄大胆，竟然是空气过敏体质，只能天天吃药了。可怜的宝宝啊</p>
 
@@ -250,11 +250,11 @@
                 </div>
             </div>
             <div class="chirp-container" x-slug="zk_20250627">
-                <div class="avatar-container"><img src="/images/default/avatar.jpg">
+                <div class="avatar-container"><img src="/images/avatar/zanks.webp">
                 </div>
                 <div class="chirp-info"><div class="chirp-content post-container">
                         <div>
-                            <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">Za_Nks</div>
+                            <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">剥龙虾大王</div>
                         </div>
                         <p>可恶的小猫黄基金早上居然狠狠咬我，罚粮三份</p>
 
@@ -331,11 +331,11 @@
                 </div>
             </div>
             <div class="chirp-container" x-slug="git-lf-crlf">
-                <div class="avatar-container"><img src="/images/default/avatar.jpg">
+                <div class="avatar-container"><img src="/images/avatar/zanks.webp">
                 </div>
                 <div class="chirp-info"><div class="chirp-content post-container">
                         <div>
-                            <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">Za_Nks</div>
+                            <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">剥龙虾大王</div>
                         </div>
                         <p>Git 换行符统一为LF</p>
 
@@ -438,9 +438,9 @@
                     </div><div class="swiper-slide">
                         <div class="one-author-container">
                             <a class="avatar" href="/about">
-                                <img src="/images/default/avatar.jpg">
+                                <img src="/images/avatar/zanks.webp">
                             </a>
-                            <div class="author-name fund-title">Za_Nks</div>
+                            <div class="author-name fund-title">剥龙虾大王</div>
                             <div class="author-summary">剥龙虾大王、剥柚子也还可以</div>
                             
 <div class="social">
