--- a/external/index.html
+++ b/external/index.html
@@ -302,9 +302,9 @@ MacMini M4 ⏳ 服役时间: 2025.03.16 - 至今 💰 价格: 4000 ⚙️ 配置
                     </div><div class="swiper-slide">
                         <div class="one-author-container">
                             <a class="avatar" href="/about">
-                                <img src="/images/default/avatar.jpg">
+                                <img src="/images/avatar/zanks.webp">
                             </a>
-                            <div class="author-name fund-title">Za_Nks</div>
+                            <div class="author-name fund-title">剥龙虾大王</div>
                             <div class="author-summary">剥龙虾大王、剥柚子也还可以</div>
                             
 <div class="social">
