--- a/friends/index.html
+++ b/friends/index.html
@@ -244,7 +244,7 @@
                 </div>
                 <div class="friend-card-meta">
                     <div class="fund-title">
-                        Za_Nks
+                        剥龙虾大王
                     </div>
                     <div class="fund-secondary friends-description">
                         养了一只叫基金的可爱小猫,平时会写点技术向的东西,有点做饭的小爱好
