--- a/chirp/index.html
+++ b/chirp/index.html
@@ -181,6 +181,31 @@
                         <div>
                             <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">剥龙虾大王</div>
                         </div>
+                        <p>我平等讨厌每一种依赖格式来识别语法的编程语言，压缩一下就G了</p>
+
+                    </div>
+                    <div class="chirp-imgs-container">
+                    </div>
+                    <div class="chirp-footer fund-secondary">
+                        <div>
+                            2025-12-18 10:48:25
+                        </div>
+                        <div class="chirp-comments-btn">
+                            评论
+                        </div>
+                    </div>
+                    <div class="chirp-comments">
+                        <div id="comments-"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="chirp-container" x-slug="">
+                <div class="avatar-container"><img src="/images/avatar/zanks.webp">
+                </div>
+                <div class="chirp-info"><div class="chirp-content post-container">
+                        <div>
+                            <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">剥龙虾大王</div>
+                        </div>
                         <p>小猫黄基金的眼睛发炎了，我给他带了圈，从昨天晚上到今天都很乖的接受了，结果我今天一上班他就把圈摘了！还是在摄像头下面！请问这是在向我宣战吗？</p>
 
                     </div>
