Create zk_20260212.md ZaNksC/zanks-blog@5a3edf6b3803582dff8f706e57ae00884c90e9e6

--- a/chirp/index.html
+++ b/chirp/index.html
@@ -181,6 +181,31 @@
                         <div>
                             <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">剥龙虾大王</div>
                         </div>
+                        <p>小猫黄基金来到新家之后就拒绝在白天吃饭了，真是无愧夜猫子之名。</p>
+
+                    </div>
+                    <div class="chirp-imgs-container">
+                    </div>
+                    <div class="chirp-footer fund-secondary">
+                        <div>
+                            2026-02-12 09:22:00
+                        </div>
+                        <div class="chirp-comments-btn">
+                            评论
+                        </div>
+                    </div>
+                    <div class="chirp-comments">
+                        <div id="comments-"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="chirp-container" x-slug="">
+                <div class="avatar-container"><img src="/images/avatar/zanks.webp">
+                </div>
+                <div class="chirp-info"><div class="chirp-content post-container">
+                        <div>
+                            <div class="chirp-author" style="font-weight: bold; font-size: 1.4rem; color: var(--theme);">剥龙虾大王</div>
+                        </div>
                         <p>我平等讨厌每一种依赖格式来识别语法的编程语言，压缩一下就G了</p>
 
                     </div>
@@ -965,7 +990,7 @@
 
   </main>
   <footer>
-    <p>Copyright 2025 - 2025. All rights reserved. Powered By Hugo.Designed By <a href="https://github.com/ZaNksC/hugo-theme-fund/tree/main">Fund</a></p>
+    <p>Copyright 2025 - 2026. All rights reserved. Powered By Hugo.Designed By <a href="https://github.com/ZaNksC/hugo-theme-fund/tree/main">Fund</a></p>
 <div style="margin-top: 0.2rem">
     <a href="https://icp.gov.moe/?keyword=20250574" target="_blank">
         <img src="https://img.shields.io/badge/萌ICP-萌ICP备20250574号-red" alt="萌ICP">
